--- a/pages/index.html
+++ b/pages/index.html
@@ -15,10 +15,12 @@
         </nav>
     </header>
 
-    <main>
-        <ul>
-            <li><a href="rant-1.html">Rant 1: My First Rant</a></li>
-        </ul>
-    </main>
+    <div class="container">
+        <main>
+            <ul>
+                <li><a href="rant-1.html">Rant 1: My First Rant</a></li>
+            </ul>
+        </main>
+    </div>
 </body>
 </html>
