--- a/pages/rant-1.html
+++ b/pages/rant-1.html
@@ -15,11 +15,13 @@
         </nav>
     </header>
 
-    <main>
-        <h2>My First Rant</h2>
-        <p>
-            Argh nå er jeg sint! 
-        </p>
-    </main>
+    <div class="container">
+        <main>
+            <h2>My First Rant</h2>
+            <p>
+                Argh nå er jeg sint! 
+            </p>
+        </main>
+    </div>
 </body>
 </html>
